--- a/text/Universiade/universiade.tex
+++ b/text/Universiade/universiade.tex
@@ -183,7 +183,7 @@
 		\end{figure}
 	\section{Критерий качества}
 		После обучения генератора, необходимо проверить, что сгенерированные им изображения действительно имеют искомые характеристики. Для этого нужно ввести специальную метрику, которая будет учитывать наличие в изображении тренда интенсивности частиц. Было решено использовать среднюю плотность черных пикселей в некотором окне, и проходить этим окном по изображению (Рис. 4):
-		$$\xi_k = \frac{1}{H w}{\sum_{i=k}^{k+w} \sum_{j=0}^{255}\left| \frac{x(i, j) - 255}{255} \right|}, $$$$k = \overline{1, W - w + 1} $$
+		$$\xi_k = \frac{1}{H w}{\sum_{i=k}^{k+w} \sum_{j=0}^{H}\left| \frac{x(i, j) - 255}{255} \right|}, $$$$k = \overline{1, W - w + 1} $$
 		\begin{figure}[h!]
 			\begin{center}
 				\includegraphics[width=0.35\linewidth]{metrics}
@@ -193,6 +193,6 @@
 		\\
 		Построив график $\xi(k)$ можно увидеть, как меняется плотность пикселей и прослеживается ли тренд. В качестве метрики можно взять среднеквадратичную ошибку:
 		$$ \xi = \frac{1}{W-w}\sum_{k=1}^{W-w+1} (\xi_k - \xi_{0k})^2,$$
-		где $\xi_{ok}$ - $\xi_k$, усредненное по примерам из обучающей выборки
+		где $\xi_{ok}$ - $\xi_k$, усредненное по примерам из обучающей выборки.
 	\section{Результаты}
 \end{document}
