Presentation & text complete

--- a/code/MNIST_GAN.ipynb
+++ b/code/MNIST_GAN.ipynb
@@ -377,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# set up loss storage vector\n",
@@ -504,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
