--- a/text/Universiade/presentation.tex
+++ b/text/Universiade/presentation.tex
@@ -73,7 +73,7 @@
 		\item Пространство параметров $\theta$ может быть огромной размерности
 		\item Известной параметрической модели распределения может вообще не существовать
 	\end{itemize}
-	Простой пример - генерирование человеческих лиц, похожих на реальные: параметрической модели для такой задачи не существует.
+	Простой пример - синтез человеческих лиц: с помощью классического подхода эта задача не была решена с хорошим качеством.
 \end{frame}
 
 \begin{frame}\frametitle{Базовый нейросетевой подход}
@@ -105,9 +105,9 @@
 \end{frame}
 
 \begin{frame}\frametitle{GAN}
-	Остается вопрос: что использовать в качестве метрики похожести двух распределений $\rho$, где одно из распределений задано обучающей выборкой.
+	Возникает вопрос: что использовать в качестве метрики похожести двух распределений $\rho$, где одно из распределений задано обучающей выборкой.
 	\begin{itemize}
-		\item В качестве метрики статистической похожести можно использовать loss-функцию обученного классификатора:
+		\item В качестве такой метрики можно использовать loss-функцию обученного классификатора:
 		$$ \rho(P_{X'}, P_X) \longrightarrow \min \Leftrightarrow \mathcal{L} \longrightarrow \max, $$
 		где $\mathcal{L}$ - функция потерь обученного классификатора.
 	\end{itemize}
@@ -120,18 +120,19 @@
 			\item $d_{\zeta}(x)$ - классификатор для измерения расстояния, \textbf{дискриминатор}
 			\item $g_{\theta}(x)$ - сеть, трансформирующая $V$ в $X'$, \textbf{генератор}
 		\end{itemize}
-		\item Введем loss-функцию дискриминатора(например, кросс-энтропия):
+		Суть использования двух сетей состоит в том, что они обучаются совместно, конкурируя друг с другом: генератор пытается имитировать целевое распределение, а дискриминатор пытается отличить сгенерированные изображения от реальных из обучающей выборки.
+		\item Введем loss-функцию дискриминатора(например, logloss):
 		$$ L(X, X') = \frac{1}{2} \mathbb{E}_{x \sim X} l(d_{\zeta}(x), 1) + \frac{1}{2} \mathbb{E}_{x' \sim X'} l(d_{\zeta}(x'), 0) = $$
 		 $$ = -\frac{1}{2} (\mathbb{E}_{x \sim X} \log d_{\zeta}(x) + \mathbb{E}_{x' \sim X'} \log (1 - d_{\zeta}(x'))) = $$
 		 $$ =  -\frac{1}{2} (\mathbb{E}_{x \sim X} \log d_{\zeta}(x) + \mathbb{E}_{v \sim V} \log (1 - d_{\zeta}(g_{\theta}(v)))) = $$
 		 $$ = L(\zeta, \theta) $$
-		 \item Loss-функция обученного классификатора:
-		 $$ L^*(\theta) = \underset{\zeta}{\min} L(\zeta, \theta) $$
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{GAN}
 	\begin{itemize}
+		\item Loss-функция обученного классификатора:
+		$$ L^*(\theta) = \underset{\zeta}{\min} L(\zeta, \theta) $$
 		\item Соответственно,
 		 $$ \underset{\zeta}{\min} L(\zeta, \theta) \longrightarrow \underset{\theta}{\max} $$
 		 $$ \theta^* = \underset{\theta}{\arg\max} \left[ \underset{\zeta}{\min} L(\zeta, \theta) \right] $$
@@ -147,9 +148,9 @@
 		\column{0.5\linewidth}
 			\begin{center}
 				\begin{itemize}
-					\item Обучаем дискриминатор при 'замороженном' генераторе
-					\item Обучаем генератор при 'замороженном' дискриминаторе
-					\item Повторяем много раз
+					\item Обучаем дискриминатор при фиксированном генераторе
+					\item Обучаем генератор при фиксированном дискриминаторе
+					\item Повторяем до сходимости параметров обеих моделей
 				\end{itemize}
 			\end{center}
 		\column{0.5\linewidth}
