--- a/text/Universiade/universiade.tex
+++ b/text/Universiade/universiade.tex
@@ -71,13 +71,13 @@
 	%учитываем титульный лист в нумерации
 	\setcounter{page}{2}
 	\section{Введение}
-		Задача состоит в синтезе изображений среды, которые будут содержать в себе тренд, т.е. изменение некоторой статистической характеристики. Такими трендами могут быть, например, изменение интенсивности появления частиц среды вдоль изображения, или изменение пористости среды. \\
+		Цель работы состоит в построении процедуры синтеза изображений среды, которые будут содержать в себе тренд. Под текстурой с трендом понимается изображение, в котором есть изменение некоторой статистической характеристики вдоль одного из направлений. Такими характеристиками, например, могут быть изменение интенсивности появления частиц среды или изменение пористости среды. \\
 		\begin{figure}[h]
 			\centering{\includegraphics[width=0.35\linewidth]{trend-sample}}
-			\caption{Пример текстуры с трендом интенсивности частиц}
+			\caption{Пример текстуры с трендом интенсивности частиц.}
 		\end{figure}
 	\section{Математическая постановка}
-		С математической точки зрения, задача сводится к синтезу случайного изображения $X'$ (и построению соотвествующей процедуры синтеза), принадлежащему распределению, близкому к желаемому:
+		Рассмотрим гипотетическое многомерное пространство, в котором находятся все изображения. Тогда обучающая выборка изображений с трендами задает в этом пространстве вероятностное распределение $P_X$, в котором точки, соответствующие изображениям из выборки, имеют высокую вероятность, а остальные - очень низкую. Это так называемая вероятностная постановка задачи обучения \cite{Voron-ML, GAN} . Тогда с математической точки зрения задача синтеза текстуры с трендом сводится к синтезу случайного изображения $X'$, принадлежащего распределению, близкому к задаваемому обучающей выборкой:
 		$$ P_{X'} \approx P_X,$$
 		где $P_X$ - распределение изображений с трендами, удовлетворяющих следующим ограничениям (для упрощения задачи):
 		\begin{itemize}
@@ -86,7 +86,6 @@
 			\item Тренд является линейным и направлен вдоль оси x: 
 			$ \lambda = \lambda_0 + kx $
 		\end{itemize}
-		Распределение $P_X$ задается обучающей выборкой.
 	\section{Существующие подходы к решению задачи}
 		Есть несколько подходов к решению задач подобного рода:
 		\begin{itemize}
@@ -100,14 +99,14 @@
 				\item Параметры $\theta$ находятся из обучающей выборки:
 				$$ \mathcal{L}_{\theta}(D) = \prod_{x \in D} P_{\theta}(x) $$
 				$$ \theta^{*} = \underset{\theta}{\arg\max} \mathcal{L}_{\theta}(D)$$
-				\item Генерируется семпл из $ P_{\theta^{*}}$
+				\item Генерируется текстура из распределения $ P_{\theta^{*}}$
 			\end{itemize}
 			Этот подход приводит к проблемам:
 			\begin{itemize}
 				\item Пространство параметров $\theta$ может быть огромной размерности
 				\item Известной параметрической модели распределения может вообще не существовать
 			\end{itemize}
-			Простой пример - генерирование человеческих лиц, похожих на реальные: параметрической модели для такой задачи не существует.
+			Простой пример - синтез человеческих лиц: с помощью классического подхода эта задача не была решена с хорошим качеством.
 		\subsection{Базовый нейросетевой подход}
 			\begin{itemize}
 				\item Вводится параметризированное семейство распределений вероятности $P_{\theta}(x)$
@@ -115,9 +114,9 @@
 					\item Вводятся скрытые переменные $V$ и функция(нейросеть) для получения $x$ из $V$ (фактически, классификация, развернутая в другую сторону)
 				\end{itemize}
 				\item Определяются параметры распределения (т.е. обучение нейросети)
-				\item Генерируются семплы из $ P_{\theta^{*}}$
+				\item Генерируется выборка из $ P_{\theta^{*}}$
 			\end{itemize}
-			Этот подход возможен, однако на практике трудноосуществим.
+			Этот подход возможен, однако на практике трудноосуществим \cite{GAN-2}.
 		\subsection{GAN - генеративные состязательные сети}
 				Вернемся к изначальной задаче: найти процеруду генерирования $X'$ так, чтобы $ P_{X'} \approx P_X$.
 				Переформулируем:
@@ -130,21 +129,23 @@
 				$$ \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $$
 				$$ \rho(g_{\theta}(V), P_X) \longrightarrow \underset{g_{\theta}(V)}{\min} $$
 				$$ \rho(g_{\theta}(V), P_X) \longrightarrow \underset{\theta}{\min} $$
-				Остается вопрос: что использовать в качестве метрики похожести двух распределений $\rho$, где одно из распределений задано обучающей выборкой.
-				В качестве метрики статистической похожести можно использовать loss-функцию обученного классификатора:
-				$$ \rho(P_{X'}, P_X) \longrightarrow \min \Leftrightarrow \mathcal{L} \longrightarrow \max, $$
-				где $\mathcal{L}$ - функция потерь обученного классификатора.
+				Возникает вопрос: что использовать в качестве метрики похожести двух распределений $\rho$, где одно из распределений задано обучающей выборкой.
+				В качестве такой метрики можно использовать функцию потерь обученного классификатора. Тогда задача примет вид:
+				$$ \rho(P_{X'}, P_X) \longrightarrow \min \Leftrightarrow L \longrightarrow \max, $$
+				где $L$ - функция потерь обученного классификатора.
 				Соответственно, можно ввести две нейросети:
 					\begin{itemize}
-						\item $d_{\zeta}(x)$ - классификатор для измерения расстояния, \textbf{дискриминатор}
-						\item $g_{\theta}(x)$ - сеть, трансформирующая $V$ в $X'$, \textbf{генератор}
+						\item $d_{\zeta}(x)$ - классификатор для измерения расстояния, \textbf{'дискриминатор'}
+						\item $g_{\theta}(x)$ - сеть, трансформирующая $V$ в $X'$, \textbf{'генератор'}
 					\end{itemize}
-					Введем loss-функцию дискриминатора(например, кросс-энтропия):
-					$$ L(X, X') = \frac{1}{2} \mathbb{E}_{x \sim X} l(d_{\zeta}(x), 1) + \frac{1}{2} \mathbb{E}_{x' \sim X'} l(d_{\zeta}(x'), 0) = $$
-					$$ = -\frac{1}{2} (\mathbb{E}_{x \sim X} \log d_{\zeta}(x) + \mathbb{E}_{x' \sim X'} \log (1 - d_{\zeta}(x'))) = $$
-					$$ =  -\frac{1}{2} (\mathbb{E}_{x \sim X} \log d_{\zeta}(x) + \mathbb{E}_{v \sim V} \log (1 - d_{\zeta}(g_{\theta}(v)))) = $$
-					$$ = L(\zeta, \theta) $$
-					Loss-функция обученного классификатора:
+					Суть использования двух сетей состоит в том, что они обучаются совместно, конкурируя друг с другом: генератор пытается имитировать целевое распределение, а дискриминатор пытается классифицировать поступающие от генератора и из обучающей выборки изображения на 2 класса: реальные (из изначального распределения $P_X$) и ложные (из $P_X'$, т.е. произведенные генератором).
+					Для дальнейшего рассмотрения введем функцию потерь дискриминатора(например, logloss):
+					$$ L(X, X') = \frac{1}{2} \mathbb{E}_{X} l(d_{\zeta}(x), 1) + \frac{1}{2} \mathbb{E}_{X'} l(d_{\zeta}(x'), 0) = $$
+					$$ = -\frac{1}{2} (\mathbb{E}_{X} \log d_{\zeta}(x) + \mathbb{E}_{X'} \log (1 - d_{\zeta}(x'))) = $$
+					$$ =  -\frac{1}{2} (\mathbb{E}_{X} \log d_{\zeta}(x) + \mathbb{E}_{V} \log (1 - d_{\zeta}(g_{\theta}(v)))) = $$
+					$$ = L(\zeta, \theta) .$$
+					$l(d_{\zeta}(x), 1)$ и $ l(d_{\zeta}(x'), 0) $ здесь - это потери при неправильной классификации реального и ложного изображений соответственно.
+					Функция потерь обученного классификатора:
 					$$ L^*(\theta) = \underset{\zeta}{\min} L(\zeta, \theta) $$
 					Соответственно,
 					$$ \underset{\zeta}{\min} L(\zeta, \theta) \longrightarrow \underset{\theta}{\max} $$
@@ -161,9 +162,9 @@
 		$$ \nabla L(\zeta^*(\theta), \theta) \approx \nabla L(\zeta^*(\theta), \theta + \Delta \theta) $$
 		В итоге, процесс обучения принимает следующий вид:
 		\begin{itemize}
-				\item Обучаем дискриминатор при 'замороженном' генераторе
-				\item Обучаем генератор при 'замороженном' дискриминаторе
-				\item Повторяем много раз
+				\item Обучаем дискриминатор при фиксированном генераторе
+				\item Обучаем генератор при фиксированном дискриминаторе
+				\item Повторяем до сходимости параметров обеих моделей
 		\end{itemize}
 		\begin{figure}
 			\begin{center}
@@ -172,9 +173,9 @@
 			\caption{Схематическое изображение процесса обучения GAN}
 		\end{figure}
 	\section{pix2pix GAN}
-		Для решения задачи было попробовано применить модификацию GAN-сети по названием "pix2pix GAN". Для нее функционал потерь выглядит следующим образом: $$ \mathcal{L}(G, D) = \mathcal{L}_{adv}(G, D) + \eta \mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)} (\parallel r - G(s_1, s_2) \parallel_1)$$
-		$$ \mathcal{L}_{adv}(G, D) = \mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)}\log D(s_1, s_2, r) + $$ $$ + \mathbb{E}_{s_1, s_2 \sim p_{data}(s_1, s_2)} \log (1 - D(s_1, s_2, G(s_1, s_2)))$$
-		где G, D - генератор и дискриминатор, $(s_1, s_2, r)$ - тройка изображений (интенсивность слева, справа и реальное изображение с трендом),  $\mathbb{E}_{s_1, s_2, r \sim p_{data}(s_1, s_2, r)}$ - мат. ожидание логарифмического правдоподобия того, что тройка изображений $(s_1, s_2, r)$ принадлежит вероятностному распределению реальных троек $p_{data}(s_1, s_2, r)$, а $p_{data}(s_1, s_2)$ соответствует распределению реальных изображений $s_1, s_2$.
+		Для решения задачи было попробовано применить модификацию GAN-сети по названием "pix2pix GAN". Для нее функционал потерь выглядит следующим образом: $$ L(G, D) = L_{adv}(G, D) + \eta \mathbb{E}_{p_{data}(s_1, s_2, r)} (\parallel r - G(s_1, s_2) \parallel_1)$$
+		$$ L_{adv}(G, D) = \mathbb{E}_{p_{data}(s_1, s_2, r)}\log D(s_1, s_2, r) +  \mathbb{E}_{p_{data}(s_1, s_2)} \log (1 - D(s_1, s_2, G(s_1, s_2)))$$
+		где G, D - генератор и дискриминатор, $(s_1, s_2, r)$ - тройка изображений (интенсивность слева, справа и реальное изображение с трендом),  $\mathbb{E}_{p_{data}(s_1, s_2, r)}$ - мат. ожидание логарифмического правдоподобия того, что тройка изображений $(s_1, s_2, r)$ принадлежит вероятностному распределению реальных троек $p_{data}(s_1, s_2, r)$, а $p_{data}(s_1, s_2)$ соответствует распределению реальных изображений $s_1, s_2$.
 		\begin{figure}[h]
 			\begin{center}
 				\includegraphics[width=0.75\linewidth]{p2p-gen}
@@ -193,7 +194,7 @@
 		\\
 		Построив график $\xi(k)$ можно увидеть, как меняется плотность пикселей и прослеживается ли тренд. В качестве метрики можно взять среднеквадратичную ошибку:
 		$$ \xi = \frac{1}{W-w}\sum_{k=1}^{W-w+1} (\xi_k - \xi_{0k})^2,$$
-		где $\xi_{0k}$ - $\xi_k$, усредненное по примерам из обучающей выборки.
+		где $\xi_{0k}$ - это $\xi_k$, усредненное по примерам из обучающей выборки. Соответственно, чем меньше значение метрики, тем лучше тренд, присутствующий на сгенерированном изображении, приближает искомый.
 	\section{Результаты}
 		Было проведено обучение нейросети описанной архитектуры при различных гиперпараметрах. Обучающей выборкой был массив из 3500 троек изображений. Примеры сгенерированных текстур приведены на (Рис. 5).
 		\begin{figure}
@@ -277,6 +278,20 @@
 					\caption{Квадратичное отклонение от тренда для разных сетей}
 					\end{figure}
 			\end{center}
+	\section{Выводы}
+		В работе было:
+		\begin{itemize}
+			\item Исследовано применение архитектуры GAN для синтеза текстур с трендами
+			\item Получены результаты синтеза при нескольких наборах гиперпараметров сети
+			\item Проведено измерение качества генерации для каждого из наборов, используя специально введенную метрику
+		\end{itemize}
 	\section{Заключение}
 		Полученные результаты показывают, что в принципе нейросеть способна уловить тренд и воспроизвести его, однако на данный момент качество генерации относительно невысоко. Необходимо провести дальнешее исследование оптимальных гиперпараметров, и, возможно, увеличить объем обучающей выборки. Также можно провести аналогичные эксперименты с другими архитектурами генераторов.
+	\begin{thebibliography}{99}
+		\bibitem{Voron-ML}  Воронцов К. В., "Математические методы обучения по прецедентам (теория обучения машин)".
+		\bibitem{GAN} Ian J. Goodfellow, Jean Pouget-Abadie, Mehdi Mirza, Bign Xu, David Warde-Farley, Sherjil Ozair, Aaron Courville, Yoshua Bengio, "Generative Adversarial Nets". arXiv: 1406.2661 [stat.ML], 2014
+		\bibitem{GAN-2} Goodfellow, Ian, et al. "Generative adversarial nets". Advances in neural information processing systems. 2014
+		\bibitem{p2p} Pedro Costa, Adrian Galdran, Maria Inês Meyer, Michael David Abràmoff, Meindert Niemeijer, Ana Maria Mendonça, Aurélio Campilho, "Towards Adversarial Retinal Image Synthesis". arXiv: 1701.08974 [cs.CV], 2017
+	
+\end{thebibliography}
 \end{document}
